erDiagram
  USER {
    String id PK
    String username UK
    String passwordHash
    String displayName
    UserRole role
    UserStatus status
    DateTime createdAt
    DateTime updatedAt
  }

  AUDIT_TRAIL {
    String id PK
    String actorUserId
    String actorUsername
    String actorDisplayName
    String actorRole
    String moduleName
    String entityType
    String entityId
    String recordReference
    String action
    String changeSummary
    String actionNote
    String oldValue
    String newValue
    DateTime createdAt
  }

  CUSTOMER {
    String id PK
    String name
    String companyName
    String npwp UK
    String phone
    String email
    String address
    String customerSegment
    CustomerStatus status
    String notes
    DateTime createdAt
    DateTime updatedAt
  }

  PRODUCT {
    String id PK
    String productName
    String notes
    Int listPrice
    ProductStatus status
    DateTime createdAt
    DateTime updatedAt
  }

  SALES_ORDER {
    String id PK
    String orderNumber UK
    String customerPoNumber UK
    SalesOrderSource source
    DateTime requiredDate
    String customerPoDocumentName
    String customerPoDocumentStoredName
    String customerPoDocumentMimeType
    String customerId FK
    DateTime orderDate
    SalesOrderStatus status
    Int subtotal
    Int total
    String customerNpwpSnapshot
    Boolean ppnApplied
    Int ppnRateBasisPoints
    Int ppnAmount
    Int netSalesAmount
    PaymentTermType paymentTermType
    Int creditTermMonths
    String notes
    SalesOrderApprovalStatus approvalStatus
    String approvalRisk
    String approvalDecisionNote
    DateTime approvalDecidedAt
    String approvalDecidedById
    String createdByUserId
    DateTime createdAt
    DateTime updatedAt
  }

  SALES_ORDER_ITEM {
    String id PK
    String salesOrderId FK
    String productId FK
    String itemName
    Int quantity
    Int baseUnitPrice
    Int markupPercent
    Int discountPercent
    Int finalUnitPrice
    Int subtotal
  }

  CUSTOMER_INQUIRY {
    String id PK
    String inquiryNumber UK
    String customerId FK
    DateTime inquiryDate
    DateTime neededBy
    CustomerInquiryStatus status
    String notes
    String statusNote
    String salesOrderId FK, UK
    DateTime createdAt
    DateTime updatedAt
  }

  CUSTOMER_INQUIRY_ITEM {
    String id PK
    String customerInquiryId FK
    String productId FK
    String itemName
    Int quantity
    Int requestedUnitPrice
    Int agreedUnitPrice
    String notes
  }

  INVOICE {
    String id PK
    String invoiceNumber UK
    String salesOrderId FK, UK
    String customerId FK
    DateTime issueDate
    DateTime dueDate
    Int totalAmount
    Int paidAmount
    Int remainingAmount
    String customerNpwpSnapshot
    Boolean ppnApplied
    Int ppnRateBasisPoints
    Int ppnAmount
    Int netSalesAmount
    PaymentTermType paymentTermType
    Int creditTermMonths
    InvoiceStatus status
    String notes
    DateTime createdAt
    DateTime updatedAt
  }

  PAYMENT {
    String id PK
    String invoiceId FK
    DateTime paymentDate
    Int amount
    PaymentMethod paymentMethod
    String notes
    DateTime createdAt
    DateTime updatedAt
  }

  COLLECTION_TASK {
    String id PK
    String customerId FK
    String invoiceId FK
    DateTime scheduledDate
    CollectionTaskStatus status
    String notes
    DateTime createdAt
    DateTime updatedAt
  }

  CUSTOMER_OUTREACH {
    String id PK
    String customerId FK
    DateTime contactDate
    String notes
    DateTime createdAt
    DateTime updatedAt
  }

  DELIVERY_NOTE {
    String id PK
    String deliveryNoteNumber UK
    String invoiceId FK
    String salesOrderId FK
    String customerId FK
    String recipientName
    String recipientPhone
    String recipientAddress
    DateTime deliveryDate
    DeliveryNoteStatus status
    String notes
    String receiverName
    String senderName
    String driverName
    String vehiclePlateNumber
    String authorizedBy
    DateTime createdAt
    DateTime updatedAt
  }

  DELIVERY_NOTE_ITEM {
    String id PK
    String deliveryNoteId FK
    String productCode
    String itemName
    Int quantity
    String unit
    String description
  }

  CUSTOMER ||--o{ SALES_ORDER : places
  CUSTOMER ||--o{ CUSTOMER_INQUIRY : makes
  CUSTOMER_INQUIRY ||--|{ CUSTOMER_INQUIRY_ITEM : contains
  CUSTOMER_INQUIRY o|--o| SALES_ORDER : converts_to
  PRODUCT ||--o{ SALES_ORDER_ITEM : may_match
  PRODUCT o|--o{ CUSTOMER_INQUIRY_ITEM : may_match
  SALES_ORDER ||--|{ SALES_ORDER_ITEM : contains
  SALES_ORDER ||--o| INVOICE : generates
  CUSTOMER ||--o{ INVOICE : receives
  INVOICE ||--o{ PAYMENT : has
  CUSTOMER ||--o{ COLLECTION_TASK : has_collection
  INVOICE ||--o{ COLLECTION_TASK : may_have
  CUSTOMER ||--o{ CUSTOMER_OUTREACH : has_contact
  CUSTOMER ||--o{ DELIVERY_NOTE : receives
  SALES_ORDER ||--o{ DELIVERY_NOTE : may_support
  INVOICE ||--o{ DELIVERY_NOTE : may_support
  DELIVERY_NOTE ||--|{ DELIVERY_NOTE_ITEM : contains
